# tap-apps

./: .gitignore  CMakeLists.txt  build-benchmark-applets.sh  check_applets.sh  macros.cmake
all_applets/: A2DB4FNG.json.ts  A52hexN3.json.ts  A5GkrBZy.json.ts  A8vwSAns.json.ts  AH9KVGpR.json.ts  APBbLADc.json.ts  AR53U2hq.json.ts  (+506 more)
src/: CMakeLists.txt
src/encrypted_rule/: CMakeLists.txt  app.lds  libs.cmake
src/encrypted_rule/eapp/: edge_wrapper.c  edge_wrapper.h  enc_rule.c  encl_message.h  event_loop.c  event_loop.h  keys.c  keystore_defs.h  message.c  rule_keystore.h  rule_params.h  trigger_data_manifest.c
src/encrypted_rule/host/: edge_wrapper.cpp  edge_wrapper.h  enclave-host.cpp
src/encrypted_rule/include/: edge_defines.h  semaphore.h
src/hello/: CMakeLists.txt
src/keystore/: CMakeLists.txt  app.lds  libs.cmake
src/keystore/eapp/: edge_wrapper.c  edge_wrapper.h  keystore_cert.c  keystore_server.c
src/keystore/host/: edge_wrapper.cpp  edge_wrapper.h  enclave-host.cpp  host.cpp  keystore_datastore.cpp
src/keystore/include/: edge_defines.h  encl_message.h  keystore_cert.h  keystore_datastore.h  keystore_defs.h  keystore_report.h  keystore_request.h  keystore_rule.h  keystore_user.h
src/ntp_client/: CMakeLists.txt  app.lds
src/ntp_client/eapp/: edge_wrapper.c  edge_wrapper.h  encl_message.h  ntp_client.c
src/ntp_client/host/: edge_wrapper.cpp  edge_wrapper.h  encl_message.h  enclave-host.cpp
src/ntp_client/include/: edge_defines.h
src/rule_process/: CMakeLists.txt  app.lds  libs.cmake
src/rule_process/eapp/: event_loop.c  event_loop.h  keystore_report.h  keystore_request.h  message.h  rule_params.h
src/rule_process/host/: encl_message.h  enclave-host.cpp  event_loop.cpp
(+5 files in other folders)
